<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/battleship_background_other_pages"
        tools:context=".CreateUserActivity">


    <TextView
            android:text="@string/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/welcome_text2" android:textSize="36sp"
            app:layout_constraintHorizontal_bias="0.497" android:textColor="@color/darkGrey"
            android:fontFamily="@font/new_rocker"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/new_user_username" android:layout_marginTop="24dp"
            android:hint="@string/username" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/darkGrey"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/new_user_username"
            app:layout_constraintEnd_toEndOf="@+id/new_user_username" android:id="@+id/new_user_password" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/new_user_username"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/password"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/darkGrey"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/new_user_password"
            app:layout_constraintEnd_toEndOf="@+id/new_user_password" android:id="@+id/new_user_email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/new_user_password"
            android:hint="@string/email" android:textColor="@color/darkGrey"
            android:textColorHint="@color/darkGrey"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="198dp"
            android:layout_height="181dp" app:srcCompat="@drawable/user_vector"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintTop_toBottomOf="@+id/welcome_text2"/>
    <Button
            android:text="@string/create_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/new_user_email"
            app:layout_constraintEnd_toEndOf="@+id/new_user_email"
            android:id="@+id/button7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/new_user_email"
            app:layout_constraintHorizontal_bias="0.0" android:onClick="createUser"
            android:background="@color/colorPrimary" android:textColor="@color/white"/>
</android.support.constraint.ConstraintLayout>