<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/battleship_background_other_pages"
        tools:context=".UserDashboard">
    <android.support.constraint.ConstraintLayout
            android:layout_width="413dp"
            android:layout_height="719dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/battleship_background_other_pages"
            android:id="@+id/constraintLayout" app:layout_constraintBottom_toBottomOf="parent"
    >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/welcome_text" android:textSize="30sp"
                app:layout_constraintHorizontal_bias="0.0"
                android:fontFamily="@font/new_rocker"
                android:background="@color/colorPrimary" android:textColor="@color/white"
                android:layout_marginTop="28dp"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="676dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/welcome_text"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="423dp"
                        android:layout_height="965dp" tools:layout_editor_absoluteY="73dp"
                        tools:layout_editor_absoluteX="-2dp">

                    <TextView
                            android:text="@string/wins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5" android:layout_marginTop="44dp"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                            android:textSize="24sp"
                            android:fontFamily="@font/new_rocker" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/textView6"/>
                    <TextView
                            android:text="@string/losses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/textView5"
                            android:textSize="24sp"
                            android:fontFamily="@font/new_rocker" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textView5"
                            app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
                    <TextView
                            android:text="0"
                            android:layout_width="24dp"
                            android:layout_height="28dp"
                            android:id="@+id/user_wins" app:layout_constraintStart_toStartOf="@+id/textView5"
                            app:layout_constraintEnd_toEndOf="@+id/textView5" android:fontFamily="@font/new_rocker"
                            android:textSize="24sp" android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
                    <TextView
                            android:text="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/user_losses" app:layout_constraintStart_toStartOf="@+id/textView6"
                            app:layout_constraintEnd_toEndOf="@+id/textView6" android:layout_marginTop="11dp"
                            app:layout_constraintTop_toBottomOf="@+id/textView6" android:textSize="24sp"
                            android:fontFamily="@font/new_rocker"/>
                    <ImageView
                            android:layout_width="310dp"
                            android:layout_height="277dp" app:srcCompat="@drawable/banner2"
                            app:layout_constraintEnd_toEndOf="@+id/textView6"
                            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/textView5"
                            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/user_wins"
                            app:layout_constraintHorizontal_bias="0.507"/>
                    <Button
                            android:text="@string/singleplayer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintEnd_toEndOf="@+id/imageView"
                            android:id="@+id/button2"
                            android:background="@color/colorPrimary" android:textColor="@color/white"
                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView"
                            android:onClick="createNewSinglePlayerGame"/>
                    <Button
                            android:text="@string/multiplayer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@+id/button2"
                            app:layout_constraintEnd_toEndOf="@+id/button2"
                            android:id="@+id/button3" android:layout_marginTop="24dp"
                            app:layout_constraintTop_toBottomOf="@+id/button2"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:onClick="goToChooseUser" android:background="@color/colorPrimary"
                            android:textColor="@color/white"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="14dp"
                            app:layout_constraintTop_toBottomOf="@+id/button3"
                            android:id="@+id/active_games_linear_layout">
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:id="@+id/logout_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0">
                    </LinearLayout>
                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" app:srcCompat="@android:drawable/stat_notify_sync"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:id="@+id/sync_active_games" android:layout_marginTop="20dp"
                            android:background="@null"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                            app:layout_constraintHorizontal_bias="0.934"/>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>